--- a/src/scss/components/right_bar.scss
+++ b/src/scss/components/right_bar.scss
@@ -143,7 +143,7 @@ h1 {
   }
   .speed_type {
     font-size: 20px;
-    margin: 22px 0px 0px 5px;
+    margin: 22px 0px 10px 5px;
   }
 }
 .wind_state {
@@ -172,7 +172,11 @@ h1 {
 }
 
 .humidity {
-  margin: 36px 0px 55px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0px 30px 0px;
+  padding-right: 30px;
   &_value {
     font-weight: 400;
     font-size: 48px;
@@ -182,6 +186,23 @@ h1 {
     font-weight: 400;
     font-size: 24px;
     margin-bottom: 20px;
+  }
+  &_scale {
+    width: 30px;
+    height: 90px;
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    border-radius: 50px;
+    padding: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  &_ball {
+    width: 100%;
+    height: 16px;
+    background-color: #4050d2;
+    border-radius: 50px;
   }
 }
 
@@ -199,12 +220,12 @@ h1 {
   }
   &_type {
     font-size: 20px;
-    &_state {
-      font-size: 18px;
-    }
   }
 }
 
+.range_state {
+  font-size: 18px;
+}
 .max {
   margin-top: 30px;
   margin-bottom: 15px;
