--- a/src/scss/components/right_bar.scss
+++ b/src/scss/components/right_bar.scss
@@ -171,6 +171,40 @@ h1 {
   font-size: 24px;
 }
 
+.uv_index {
+  display: flex;
+  align-items: center;
+  margin: 20px 0px 30px 0px;
+  justify-content: space-between;
+  padding-right: 30px;
+  &_value {
+    font-weight: 400;
+    font-size: 48px;
+    margin-right: 3px;
+  }
+  &_scale {
+    width: 30px;
+    height: 90px;
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    border-radius: 50px;
+    padding: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  &_ball {
+    width: 100%;
+    height: 16px;
+    background-color: orange;
+    border-radius: 50px;
+  }
+}
+.uv_state {
+  font-weight: 400;
+  font-size: 18px;
+}
+
 .humidity {
   display: flex;
   align-items: center;
